[package]
name = "rendertron_cache_server"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
fs2 = "0.4.3"
hyper = "0.12.35"
futures = "0.1"
lazy_static = "1.4.0"
derive-new = "0.5"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
chrono = "0.4"
reqwest = "0.9.22"
